pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/gateway-builtingateway-with-multiple-listeners.routes.golden.yaml
resources:
- name: sample-gateway:HTTP:8080:*
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8080:*
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - example.kuma.io
      name: example.kuma.io
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
- name: sample-gateway:HTTP:8081:*
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8081:*
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - another.kuma.io
      name: another.kuma.io
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
- name: sample-gateway:HTTP:8082:*
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8082:*
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - app.test.kuma.io
      name: app.test.kuma.io
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
    - domains:
      - '*.test.kuma.io'
      name: '*.test.kuma.io'
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
- name: sample-gateway:HTTP:8083:*
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8083:*
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - another.kuma.io
      name: another.kuma.io
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
    - domains:
      - app.test.kuma.io
      name: app.test.kuma.io
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          path: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
      - match:
          prefix: /
        name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
        route:
          clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
          idleTimeout: 5s
          weightedClusters:
            clusters:
            - name: echo-service-f111aabd47affdc4
              requestHeadersToAdd:
              - header:
                  key: x-kuma-tags
                  value: '&kuma.io/service=sample-gateway&'
              weight: 100
